[package]
authors = ["garebear"]
default-run = "hd-toolbox"
description = "Toolbox full of tools for Spelunky HD"
edition = "2021"
license = "Apache 2"
name = "hd-toolbox"
repository = ""
rust-version = "1.57"
version = "0.8.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
static-files = "0.2"
tauri-build = {version = "1.2.0", features = [] }

[dependencies]
anyhow = "1"
async-trait = "0.1"
byteorder = "1"
fern = "0.6"
futures = "0.3"
hdt_cat_labels = {path = "../libs/cat_labels"}
hdt_mem_reader = {path = "../libs/mem_reader"}
hyper = {version = "0.14", features = ["full"] }
hyper-tungstenite = "0.8"
log = "0.4"
open = "2.1.2"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
static-files = "0.2"
tauri = {version = "1.2.0", features = ["api-all", "updater"] }
tauri-plugin-log = {git = "https://github.com/tauri-apps/tauri-plugin-log", branch = "dev"}
tauri-plugin-store = {git = "https://github.com/gmjosack/tauri-plugin-store", branch = "tokio-watch"}
tauri-plugin-window-state = "0.1.0"
tokio = {version = "1", features = ["full"] }
winapi = {version = "0.3.9", features = [
  "handleapi",
  "memoryapi",
  "minwinbase",
  "ntdef",
  "processthreadsapi",
  "psapi",
  "tlhelp32",
  "winnt",
] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
