[package]
authors = ["garebear"]
name = "show_procs"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
hdt_mem_reader = {path = "../mem_reader"}


[target.'cfg(target_os = "windows")'.dependencies]
winapi = {version = "0.3.9", features = [
  "handleapi",
  "minwinbase",
  "tlhelp32",
]}
